# kovri

./: .gitmodules  .travis.yml  CMakeLists.txt
cmake/: BuildCryptoPP.cmake  custom.user.props
src/: CMakeLists.txt
src/app/: daemon.cc  daemon_linux.cc  daemon_win32.cc  main.cc  win32_service.cc
src/client/: context.cc  destination.cc  instance.cc  reseed.cc  service.cc  tunnel.cc
src/client/address_book/: impl.cc  storage.cc
src/client/api/: datagram.cc  streaming.cc
src/client/api/i2p_control/: data.cc  (+2 more)
src/client/proxy/: http.cc  socks.cc
src/client/util/: config.cc  http.cc  json.cc  parse.cc  zip.cc
src/core/: CMakeLists.txt  instance.cc
src/core/router/: context.cc  garlic.cc  i2np.cc  i2np.h  identity.cc  identity.h  info.cc  lease_set.cc  lease_set.h  profiling.cc
src/core/util/: byte_stream.cc  config.cc  exception.cc  filesystem.cc  filesystem.h  log.cc  mtu.cc
src/util/: base.cc  benchmark.cc  cpuid.cc  fuzz.cc  i2pcontrol.cc  i2pcontrol_client.cc  kovri.cc  main.cc  routerinfo.cc  su3file.cc
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/client/: reseed.cc
tests/unit_tests/client/address_book/: impl.cc
tests/unit_tests/client/api/i2p_control/: data.cc  parser.cc
tests/unit_tests/client/proxy/: http.cc
tests/unit_tests/client/util/: zip.cc
tests/unit_tests/core/crypto/: aes.cc  dsa.cc  eddsa25519.cc  elgamal.cc  radix.cc  rand.cc
tests/unit_tests/core/crypto/util/: x509.cc
tests/unit_tests/core/router/: identity.cc
tests/unit_tests/core/router/transports/ssu/: packet.cc
tests/unit_tests/core/util/: byte_stream.cc
(+69 files in other folders)
